// Code generated by tableau (protogen v0.5.0). DO NOT EDIT.
// clang-format off

syntax = "proto3";

package protoconf;

import "tableau/protobuf/tableau.proto";

option go_package = "github.com/tableauio/tableau/test/dev/protoconf";
option (tableau.workbook) = {name:"xml/MultiSheet.xml"};

message Server {
  option (tableau.worksheet) = {name:"Server" namerow:1 typerow:2 noterow:3 datarow:4 nameline:1 typeline:1 nested:true};

  string desc = 1 [(tableau.field) = {name:"Desc"}];
  MapConf map_conf = 2 [(tableau.field) = {name:"MapConf"}];
  message MapConf {
    repeated int64 param_list = 1 [(tableau.field) = {name:"Param" layout:LAYOUT_INCELL}];
    map<int32, int32> type_num_map = 2 [(tableau.field) = {name:"TypeNum" layout:LAYOUT_INCELL}];
    map<int32, Weight> weight_map = 3 [(tableau.field) = {name:"Weight" key:"Num" layout:LAYOUT_VERTICAL}];
    message Weight {
      int32 num = 1 [(tableau.field) = {name:"Num"}];
      repeated Param param_list = 2 [(tableau.field) = {name:"Param" key:"Value" layout:LAYOUT_VERTICAL}];
      message Param {
        int32 value = 1 [(tableau.field) = {name:"Value"}];
      }
    }
  }
  repeated Node node_list = 3 [(tableau.field) = {name:"Node" key:"Addr" layout:LAYOUT_VERTICAL}];
  message Node {
    string addr = 1 [(tableau.field) = {name:"Addr"}];
    int32 proc_num = 2 [(tableau.field) = {name:"ProcNum"}];
  }
  StructConf struct_conf = 4 [(tableau.field) = {name:"StructConf"}];
  message StructConf {
    Weight weight = 1 [(tableau.field) = {name:"Weight"}];
    message Weight {
      int32 num = 1 [(tableau.field) = {name:"Num"}];
      Param param = 2 [(tableau.field) = {name:"Param"}];
      message Param {
        int32 value = 1 [(tableau.field) = {name:"Value"}];
      }
    }
  }
  ListConf list_conf = 5 [(tableau.field) = {name:"ListConf"}];
  message ListConf {
    repeated Weight weight_list = 1 [(tableau.field) = {name:"Weight" key:"Num" layout:LAYOUT_VERTICAL}];
    message Weight {
      int32 num = 1 [(tableau.field) = {name:"Num"}];
      repeated Param param_list = 2 [(tableau.field) = {name:"Param" key:"Value" layout:LAYOUT_VERTICAL}];
      message Param {
        int32 value = 1 [(tableau.field) = {name:"Value"}];
      }
    }
  }
}

message Client {
  option (tableau.worksheet) = {name:"Client" namerow:1 typerow:2 noterow:3 datarow:4 nameline:1 typeline:1 nested:true};

  Version version = 1 [(tableau.field) = {name:"Version"}];
  message Version {
    string min = 1 [(tableau.field) = {name:"Min"}];
    string max = 2 [(tableau.field) = {name:"Max"}];
  }
}
