syntax = "proto3";
package test;
option go_package = "github.com/tableauio/tableau/cmd/test/testpb";

import "tableau/protobuf/tableau.proto";

message Item {
  int32 id = 1 [(tableau.field).name = "Id"];
  int32 num = 2 [(tableau.field).name = "Num"];
}

enum ConfType {
  CONF_TYPE_UNKNOWN = 0 [(tableau.evalue).name = "未知"];
  CONF_TYPE_CLOUD = 1 [(tableau.evalue).name = "云上"];
  CONF_TYPE_LOCAL = 2 [(tableau.evalue).name = "本地"];
  CONF_TYPE_REMOTE = 3 [(tableau.evalue).name = "远程"];
}

enum ServerType {
  SERVER_TYPE_UNKNOWN = 0 [(tableau.evalue).name = "未知"];
  SERVER_TYPE_GAME = 1 [(tableau.evalue).name = "游戏服"];
  SERVER_TYPE_ACTIVITY = 2 [(tableau.evalue).name = "活动服"];
  SERVER_TYPE_MATCH = 3 [(tableau.evalue).name = "匹配服"];
}