// Generated by tableauc 0.1.1. DO NOT EDIT.
syntax = "proto3";
package testxml;
option go_package = "github.com/tableauio/tableau/cmd/test/testpb/xml";

import "cs_com_def.proto";
import "google/protobuf/timestamp.proto";
import "tableau/protobuf/tableau.proto";

option (tableau.workbook) = {name:"FeatureToggle.xml"};

message ToggleCfg {
  option (tableau.worksheet) = {name:"ToggleCfg" namerow:1 typerow:2 noterow:3 datarow:4 nameline:1 typeline:1 nested:true};

  map<uint32, FeatureToggle> feature_toggle_map = 1 [(tableau.field) = {name:"FeatureToggle" key:"EnvID" layout:LAYOUT_VERTICAL}];
  message FeatureToggle {
    uint32 env_id = 1 [(tableau.field) = {name:"EnvID"}];
    string desc = 2 [(tableau.field) = {name:"Desc"}];
    map<int32, Toggle> toggle_map = 3 [(tableau.field) = {name:"Toggle" key:"Id" layout:LAYOUT_VERTICAL}];
    message Toggle {
      FeatureToggleMacroType id = 1 [(tableau.field) = {name:"Id"}];
      uint32 world_id = 2 [(tableau.field) = {name:"WorldID"}];
      uint32 zone_id = 3 [(tableau.field) = {name:"ZoneID"}];
      google.protobuf.Timestamp open_time = 4 [(tableau.field) = {name:"OpenTime"}];
      google.protobuf.Timestamp close_time = 5 [(tableau.field) = {name:"CloseTime"}];
      int64 sys_key_1 = 6 [(tableau.field) = {name:"SysKey1"}];
      int64 sys_key_2 = 7 [(tableau.field) = {name:"SysKey2"}];
      bool notify_closed = 8 [(tableau.field) = {name:"NotifyClosed"}];
      string name = 9 [(tableau.field) = {name:"Name"}];
      int32 open_rate = 10 [(tableau.field) = {name:"OpenRate"}];
      string desc = 11 [(tableau.field) = {name:"Desc"}];
    }
  }
  bool _placeholder = 2 [(tableau.field) = {name:"_placeholder"}];
}
